[package]
name = "discord-audio-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cpal = "0.15.0"
futures-util = { version = "0.3.25", default-features = false }
ringbuf = "0.3.2"
songbird = { version = "0.3.0", default-features = false, features = ["twilight-rustls", "driver", "zlib-stock"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
twilight-gateway = "0.12"
twilight-http = "0.12"
twilight-model = "0.12"
